k8s/platform/monitoring/controllers/kube-prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - "grafana.ankilabs.org"
    - "grafana.quizlabs.org"
  parentRefs:
    - name: homelab-gateway
      namespace: platform
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
